--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^5.9.2",
     "expo": "~40.0.0",
+    "expo-image-picker": "~9.2.0",
+    "expo-location": "~10.0.0",
+    "expo-permissions": "~10.0.0",
     "expo-status-bar": "~1.0.3",
     "formik": "^2.1.4",
     "react": "16.13.1",
@@ -17,9 +21,10 @@
     "react-native-gesture-handler": "~1.8.0",
     "react-native-web": "~0.13.12",
     "yup": "^0.32.8",
-    "expo-image-picker": "~9.2.0",
-    "expo-permissions": "~10.0.0",
-    "expo-location": "~10.0.0"
+    "react-native-reanimated": "~1.13.0",
+    "react-native-screens": "~2.15.0",
+    "react-native-safe-area-context": "3.1.9",
+    "@react-native-community/masked-view": "0.1.10"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
