--- a/app.json
+++ b/app.json
@@ -19,6 +19,10 @@
     "ios": {
       "supportsTablet": true
     },
+    "description": "A marketplace for selling the stuff you don't need",
+    "notification": {
+      "iosDisplayInForeground": true
+    },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
