Using bugsnag for remote debugging. Updated console.log(error) statements to bugsnag.notify(error)

--- a/app.json
+++ b/app.json
@@ -31,6 +31,19 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "bugsnag": {
+        "apiKey": "03d31665b5dc3ce60b7a62fd1b2e39c8"
+      }
+    },
+    "hooks": {
+      "postPublish": [
+        {
+          "file": "@bugsnag/expo/hooks/post-publish.js",
+          "config": {}
+        }
+      ]
     }
   }
 }
